--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,24 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.custom-scroll::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
