--- a/src/sections/clock/clock.module.css
+++ b/src/sections/clock/clock.module.css
@@ -8,8 +8,7 @@
 }
 
 .clock-section .clock .time {
-  font-size: 100px;
-  margin-top: 1rem;
+  font-size: 60px;
 }
 
 .clock-section .clock .date {
@@ -19,7 +18,7 @@
 
 .clock-section .action {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 1rem;
   position: fixed;
   bottom: 70px;
@@ -28,13 +27,16 @@
   padding-bottom: 1rem;
 }
 
-.list {
+.clock-section .list {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  max-height: calc(100vh - calc(80px + 70px) - 200px);
+  overflow-y: auto;
+  scroll-behavior: smooth;
 }
 
-.list .item {
+.clock-section .list .item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,22 +45,32 @@
   border-radius: 0.5rem;
 }
 
-.list .item .detail .timezone-clock {
+.clock-section .list .item .detail .timezone-clock {
   font-size: 24px;
 }
 
-.list .item .detail .timezone-label {
+.clock-section .list .item .detail .timezone-label {
   font-weight: normal;
   font-size: 14px;
 }
 
-.list .item .detail p {
+.clock-section .list .item .detail p {
   opacity: 0.75;
   font-size: 12px;
 }
 
-.list .item .item-action {
-  cursor: pointer;
+.clock-section .list .item .btn-delete {
+  border-radius: 1rem;
+  padding: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.clock-section .list .item .btn-delete:hover,
+.clock-section .list .item .btn-delete:active {
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .modal-add-list .timezones {
@@ -81,8 +93,7 @@
   cursor: pointer;
 }
 
-.modal-add-list .timezones .timezone:hover,
-.modal-add-list .timezones .timezone:active {
+.modal-add-list .timezones .timezone:hover {
   /* background-color: rgba(255, 255, 255, 0.25); */
   background-color: var(--mantine-primary-color-filled);
 }
@@ -97,15 +108,23 @@
   margin-bottom: 0;
 }
 
-@media (max-width: 1200px) {
-  .clock-section .clock .time {
-    font-size: 80px;
-  }
-}
-
 @media (max-width: 767px) {
   .clock-section .clock .time {
     font-size: 48px;
+    margin-top: 1rem;
+  }
+
+  .clock-section .list {
+    position: fixed;
+    bottom: calc(80px + 80px);
+    left: 1.5rem;
+    right: 1.5rem;
+    top: 200px;
+    max-height: unset;
+  }
+
+  .clock-section .action {
+    justify-content: flex-end;
   }
 
   .modal-add-list .timezones {
