fix (clock): clear get

--- a/src/sections/clock/clock.module.css
+++ b/src/sections/clock/clock.module.css
@@ -47,6 +47,7 @@
 
 .clock-section .list .item .detail .timezone-clock {
   font-size: 24px;
+  margin-right: 0.25rem;
 }
 
 .clock-section .list .item .detail .timezone-label {
