--- a/src/sections/timer/timer.module.css
+++ b/src/sections/timer/timer.module.css
@@ -2,3 +2,80 @@
   padding-top: 1rem;
   padding-bottom: 80px;
 }
+
+.timer-section .progress {
+  max-width: 360px;
+  margin: 0 auto;
+  padding: 2.5rem 1rem 0rem;
+}
+
+.timer-section .time {
+  text-align: center;
+  font-size: 40px;
+  transition: 0.3s ease-out;
+}
+
+.timer-section .timer {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  opacity: 0.5;
+}
+
+.timer-section .timer .setting {
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  padding: 0;
+  backgroundcolor: transparent;
+  border: none;
+  color: #fff;
+}
+
+.timer-section .action {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  position: fixed;
+  bottom: 70px;
+  left: 0;
+  right: 0;
+  padding-bottom: 1rem;
+}
+
+.modal-set-time .times {
+  display: flex;
+  align-items: center;
+  font-size: 48px;
+  margin-bottom: 2rem;
+}
+
+.modal-set-time .time {
+  text-align: center;
+  line-height: 56px;
+}
+
+.modal-set-time .template {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.modal-set-time .action {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+
+@media (max-width: 767px) {
+  .modal-set-time .action {
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
+  }
+}
